Fix Swaggo (#17)
* create-update-todos-by-muhammad-febri-andani

* update-swagger-byfebri

* chore: update swagger and remove static port

* fix:build error

* fix:http swagger and methods

* generate swaggo
