# docs/swagger.yaml
@@ -13,7 +13,9 @@ definitions:
         type: string
       name:
         type: string
-      order_id:
+      status:
+        type: boolean
+      todo_id:
         type: integer
       updated_at:
         type: string
@@ -40,13 +42,9 @@ info:
     email: support@swagger.io
     name: API Support
     url: http://www.swagger.io/support
-  description: This is a sample server celler server.
   license:
     name: Apache 2.0
     url: http://www.apache.org/licenses/LICENSE-2.0.html
-  termsOfService: http://swagger.io/terms/
-  title: Swagger Example API
-  version: "1.0"
 paths:
   /todo:
     post:
@@ -95,6 +93,30 @@ paths:
           schema:
             $ref: '#/definitions/utils.HttpError'
       summary: create a todo
+      tags:
+      - Todo
+  /todo/update/{id}:
+    put:
+      parameters:
+      - description: Todo ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/utils.HttpSuccess-models_TodoModel'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/utils.HttpError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/utils.HttpError'
+      summary: update a todo
       tags:
       - Todo
 swagger: "2.0"
